# ai-video-studio

./: .gitignore  pyproject.toml
backend/: run.ps1  studio.db
backend/app/: main.py
backend/app/agent/: planner.py
backend/app/api/: agent.py  assets.py  cast.py  health.py  jobs.py  personas.py  pipeline.py  projects.py  prompt.py  providers.py  storyboard.py  web.py
backend/app/core/: config.py  db.py  sizes.py
backend/app/engine/: cache.py  executor.py  graph.py  node.py  poller.py  registry.py  types.py
backend/app/models/: __init__.py  asset.py  cast.py  job.py  persona.py  project.py  shot.py
backend/app/nodes/: audio.py  image.py  io.py  primitives.py  video.py
backend/app/providers/: base.py  registry.py
backend/app/providers/aliyun/: __init__.py  avatar.py  image.py  r2v.py  text.py  tts.py  video.py
backend/app/providers/volcano/: __init__.py  avatar.py  image.py  text.py  tts.py  video.py
backend/app/schemas/: __init__.py
backend/app/services/: director.py  ffmpeg.py  refs.py  storage.py
backend/app/workers/: runner.py
backend/tools/ffmpeg/: README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  compiler.ts  graph.ts  hints.ts  storage.ts  store.ts  styles.css  templates.ts  types.ts
frontend/src/components/: ChatPanel.tsx  CredsPanel.tsx  DynamicNode.tsx  Legend.tsx  Sidebar.tsx  Toolbar.tsx
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
