[project]
name = "ai-video-studio"
version = "0.2.0"
description = "AI 短视频生成平台（ComfyUI 式节点图引擎）"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-multipart>=0.0.9",
    "requests>=2.32",
    "pillow>=10",
    "opencv-python-headless>=4.10",
    "dashscope>=1.23.8",
]

[tool.uv]
package = false

# 后端代码在 backend/ 下，启动时把它作为工作目录：
#   uv run uvicorn app.main:app --reload --port 8000   （在 backend/ 目录里执行）
